--- a/files/local.conf
+++ b/files/local.conf
@@ -43,7 +43,7 @@ namespace inbox {
   type = private
   separator = /
   prefix =
-  location = ~/var/vmail/%d/%n/Inbox
+  location = /var/vmail/%d/%n/Inbox
   inbox = yes
   hidden = no
   list = yes
@@ -71,7 +71,7 @@ namespace inbox {
   }
 }
 
-mail_attachment_dir = ~/Maildir/attachments/
+mail_attachment_dir = /var/vmail/%d/%n/attachments
 
 #
 # protocol settings
