--- a/files/smtpd.conf
+++ b/files/smtpd.conf
@@ -12,17 +12,15 @@ table virtuals file:/etc/mail/virtuals
 filter "rspamd" proc-exec "/usr/local/libexec/smtpd/filter-rspamd"
 
 # listen directives
-listen on all tls pki "mail" hostname "<maildom>" filter "rspamd"
-listen on egress port submission tls-require pki "mail" \
-	hostname "<maildom>" auth <credentials> filter "rspamd"
+listen on egress port 587 tls-require pki "mail" \
+    hostname "<maildom>" auth <credentials> filter "rspamd"
 
 action "local" mbox alias <aliases>
-action "inbound" maildir "/var/vmail/<domain>/%{dest.user:lowercase}" virtual <virtuals>
+action "inbound" maildir "/var/vmail/%{dest.domain:lowercase}/%{dest.user:lowercase}" virtual <virtuals>
 action "outbound" relay helo "<domain>"
 
 # accept external mail
 match from any for domain "<domain>" action "inbound"
 match from local for local action "local"
-
-match from local for any action "outbound"
 match from auth for any action "outbound"
+match from local for any action "outbound"
