Listen on all (smtpd.conf)

--- a/files/smtpd.conf
+++ b/files/smtpd.conf
@@ -12,6 +12,7 @@ table virtuals file:/etc/mail/virtuals
 filter "rspamd" proc-exec "/usr/local/libexec/smtpd/filter-rspamd"
 
 # listen directives
+listen on all tls pki "mail" hostname "<maildom>" filter "rspamd"
 listen on egress port 587 tls-require pki "mail" \
     hostname "<maildom>" auth <credentials> filter "rspamd"
 
@@ -22,5 +23,5 @@ action "outbound" relay helo "<domain>"
 # accept external mail
 match from any for domain "<domain>" action "inbound"
 match from local for local action "local"
-match from auth for any action "outbound"
 match from local for any action "outbound"
+match from auth for any action "outbound"
