--- a/files/smtpd.conf
+++ b/files/smtpd.conf
@@ -8,6 +8,7 @@ pki "mail" key "/etc/ssl/private/<maildom>.key"
 table aliases file:/etc/mail/aliases
 table credentials passwd:/etc/mail/credentials
 table virtuals file:/etc/mail/virtuals
+table domains file:/etc/mail/domains
 
 filter "rspamd" proc-exec "/usr/local/libexec/smtpd/filter-rspamd"
 
@@ -17,11 +18,12 @@ listen on egress port 587 tls-require pki "mail" \
     hostname "<maildom>" auth <credentials> filter "rspamd"
 
 action "local" mbox alias <aliases>
-action "inbound" maildir "/var/vmail/%{dest.domain:lowercase}/%{dest.user:lowercase}" virtual <virtuals>
+action "inbound" \
+    maildir "/var/vmail/%{dest.domain:lowercase}/%{dest.user:lowercase}/Inbox" virtual <virtuals>
 action "outbound" relay helo "<domain>"
 
 # accept external mail
-match from any for domain "<domain>" action "inbound"
+match from any for domain <domains> action "inbound"
 match from local for local action "local"
 match from local for any action "outbound"
 match from auth for any action "outbound"
