--- a/files/httpd.conf
+++ b/files/httpd.conf
@@ -1,6 +1,11 @@
 
 server "<maildom>" {
         listen on * port 80
+        listen on * tls port 443
+        tls {
+                certificate "/etc/ssl/<maildom>.crt"
+                key "/etc/ssl/private/<maildom>.key"
+        }
         location "/.well-known/acme-challenge/*" {
                 root "/acme"
                 request strip 2
