Fix  a lot of bugs

--- a/files/smtpd.conf
+++ b/files/smtpd.conf
@@ -13,7 +13,7 @@ table domains file:/etc/mail/domains
 filter "rspamd" proc-exec "/usr/local/libexec/smtpd/filter-rspamd"
 
 # listen directives
-listen on egress port 587 tls-require pki "mail" \
+listen on all port 587 tls-require pki "mail" \
     hostname "<maildom>" auth <credentials> filter "rspamd"
 
 action "local" mbox alias <aliases>
