Add listen all so other servers can deliver email

--- a/files/smtpd.conf
+++ b/files/smtpd.conf
@@ -13,6 +13,8 @@ table domains file:/etc/mail/domains
 filter "rspamd" proc-exec "/usr/local/libexec/smtpd/filter-rspamd"
 
 # listen directives
+listen on all port 25 tls-require pki "mail" \
+    hostname "<maildom>" filter "rspamd"
 listen on all port 587 tls-require pki "mail" \
     hostname "<maildom>" auth <credentials> filter "rspamd"
 
